--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,21 +2,16 @@
 #      environment configuration  #
 #---------------------------------#
 version: 2.4.{build}.0
-os: Visual Studio 2015
+
 install:
     - git clone https://github.com/PowerShell/DscResource.Tests
-    - ps: Import-Module -Name .\Tests\TestHelpers\WMF5Dot1Installation.psm1 -Force
-    - ps: Install-Wmf5Dot1
-    - ps: Start-Sleep 5
-    - ps: Restart-Computer -Force
-    - ps: Start-Sleep 5
-    - ps: Write-Verbose -Message "Returned after restart with PSVersion $($PSVersionTable.PSVersion)" -Verbose
-    - ps: if ($PSVersionTable.PSVersion -lt [Version] '5.1')
-        {
-            throw 'WMF 5.1 install failed'
-        }
     - ps: Import-Module "$env:APPVEYOR_BUILD_FOLDER\DscResource.Tests\AppVeyor.psm1"
-    - ps: Invoke-AppveyorInstallTask
+    - ps: #Invoke-AppveyorInstallTask
+
+environment:
+  matrix:		
+    - APPVEYOR_BUILD_WORKER_IMAGE: Dsc2012R2noWmf
+      build_cloud: DscCloud2012R2noWmf
 
 #---------------------------------#
 #      build configuration        #
@@ -30,7 +25,10 @@ build: false
 
 test_script:
     - ps: |
-        Invoke-AppveyorTestScriptTask -CodeCoverage -CodeCovIo
+      $scriptBlock = @"
+      Invoke-AppveyorTestScriptTask
+      "@
+      C:\PowerShell6\powershell.exe -command $scriptBlock
 
 #---------------------------------#
 #      deployment configuration   #
